--- a/Estilos.css
+++ b/Estilos.css
@@ -1,5 +1,22 @@
 @import url('https://fonts.googleapis.com/css2?family=Inria+Sans:wght@400;700&family=Josefin+Sans:wght@400;600&display=swap');
 
+:root {
+    --color-seccion:  black;
+    --color-seccion-clara: grey;
+    --armonia-color: #EA8244;
+    --melodia-color: #F9C924;
+    --ritmo-color: #E46653;
+    --fondo-color: #1F6272;
+    --adornos-color: #6CA353;
+}
+
+#armonia {--color-seccion:#EA8244; --color-seccion-clara: #FFBA91; }
+#melodia {--color-seccion: #F9C924; --color-seccion-clara: #FFE690;}
+#ritmo {--color-seccion: #E46653; --color-seccion-clara: #FF9F90;}
+#fondo {--color-seccion: #1F6272; --color-seccion-clara: #3D96AC;}
+#adornos {--color-seccion: #6CA353; --color-seccion-clara: #8ED36F;}
+
+
 body {
     font-family: 'Josefin Sans', sans-serif;
     display: flex;
@@ -67,7 +84,8 @@ body {
     border-radius: 12px;
 }
 
-.deslizador-item {
+
+.deslizador-item { /* Deslizadores */
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -84,7 +102,7 @@ body {
     width: 100%;
     height: 100%;
     border-radius: 50%;
-    background-color: #434343;
+    background-color: var(--color-seccion);
     position: absolute;
     top: 0;
     left: 0;
@@ -94,7 +112,7 @@ body {
     width: 65%;
     height: 65%;
     border-radius: 50%;
-    background-color: #7f7d7d;
+    background-color: var(--color-seccion-clara);
     position: absolute;
     top: 50%;
     left: 50%;
@@ -102,7 +120,7 @@ body {
 }
 
 .deslizador-circular .indicador {
-    width: 33%;
+    width: 46%;
     height: 10%;
     background-color: #d9d9d9;
     position: absolute;
@@ -110,9 +128,13 @@ body {
     left: 50%;
     transform-origin: left center;
     transform: translate(-50%, -50%) rotate(0deg);
+    border-color: var(--color-seccion);
+    border-style: solid;
+    border-radius: 5px;
+    border-width: 1px;
 }
 
-.controles-reproduccion { /*Botones de reproduccir y parar la consola en general*/
+.controles-reproduccion { /*Botones de reproducir y parar la consola en general*/
     display: flex;
     flex-direction: row;
    	align-items: center;
@@ -171,15 +193,10 @@ body {
     align-items: center;
     border: 3px solid; /* Borde de color específico */
     border-radius: 12px; /* Bordes curvos */
+    border-color: var(--color-seccion);
     padding: 10px;
     text-align: center;
 }
-
-#armonia {border-color: #F6B142;}
-#melodia {border-color: #F36326;}
-#ritmo {border-color: #66A13F;}
-#fondo {border-color: #EC085B;}
-#adornos {border-color: #8D0D9C;}
 
 /* Sección de los botones para los audios*/ 
 .selectores-audios {
