--- a/Estilos.css
+++ b/Estilos.css
@@ -163,17 +163,17 @@ body {
 }
 
 .deslizador-circular {
-    width: 70px;
-    height: 70px;
+    width: 55px;
+    height: 55px;
     position: relative;
-    cursor: pointer;
+    display: block;
 }
 
 .deslizador-circular .circulo-exterior {
     width: 100%;
     height: 100%;
     border-radius: 50%;
-    background-color: #BDBDBD;
+    background-color: var(--color-seccion);
     position: absolute;
     top: 0;
     left: 0;
@@ -183,7 +183,7 @@ body {
     width: 65%;
     height: 65%;
     border-radius: 50%;
-    background-color: #E0E0E0;
+    background-color: var(--color-seccion-clara);
     position: absolute;
     top: 50%;
     left: 50%;
@@ -191,15 +191,18 @@ body {
 }
 
 .deslizador-circular .indicador {
-    width: 10px;
-    height: 10px;
-    background-color: #757575;
+    width: 46%;
+    height: 10%;
+    background-color: #d9d9d9;
     position: absolute;
-    border-radius: 50%;
-    top: 15%;
+    top: 50%;
     left: 50%;
-    transform-origin: 50% 25px;
-    transform: translateX(-50%) rotate(0rad);
+    transform-origin: left center;
+    transform: translate(-50%, -50%) rotate(0deg);
+    border-color: var(--color-seccion);
+    border-style: solid;
+    border-radius: 5px;
+    border-width: 1px;
 }
 
 .deslizador-item-vertical {
@@ -360,7 +363,7 @@ body {
 
 .selector.sonando {
     box-shadow: 0 0 12px var(--color-seccion);
-    transform: scale(1.02);
+    transform: scale(1);
 }
 
 .armonia{background-color: var(--armonia-color);}
